fsp0fsp.cc: log unexpected table in sys tablespace

Fix log message about unexpected table in system tablespace as the current
message can be missleading due to still existing (but already deprecated)
system tables SYS_DATAFILES and SYS_TABLESPACES, reported in
 - MDEV-38412

Also adding the informative message with table name of the unexpected table
in system table space.